fix: unified align option of both image-decorator and table-decorator.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1592,6 +1592,10 @@
 }
 
 
+.w-max {
+    width: max-content;
+}
+
 .max-w-none {
     max-width: none;
 }
